<resources>
    <string name="app_name">Teknogas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_descargar">Recibir Datos</string>
    <string name="menu_enviar">Enviar Datos</string>
    <string name="menu_inspecciones">Inspecciones</string>
    <string name="menu_instalaciones">Instalaciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_descargar">Recibir Datos</string>
    <string name="btn_borrar">Eliminar Datos</string>
    <string name="label_ultima_recibir">Última sincronizacion:</string>
</resources>
